# agent-factory-3

./: .gitignore  LICENSE  README.md  README_ja.md  README_zh.md  pyproject.toml
examples/minesweeper/: README.md  README_ja.md  README_zh.md  accelerate_config.yaml  run_train.sh  serve.sh  train.py
examples/minesweeper/mcp_tool/: server.py
examples/wordle/: README.md  README_ja.md  README_zh.md  accelerate_config.yaml  run_train.sh  serve.sh  train.py
examples/wordle/mcp_tool/: server.py
examples/wordle_multilingual/: README.md  run_train.sh  serve.sh  train.py
examples/wordle_multilingual/mcp_tool/: server.py
examples/wordle_multilingual/tools/: build_data.py  playtest.py
mcp_tools/minesweeper/: core.py
mcp_tools/python_tool/: bwrap_executor.py  sandbox_executor.py  server.py  server_nsjail.py  server_sandbox.py  server_subprocess.py  server_v2.py  server_v4.py  server_v4p1.py  stress_test.py
mcp_tools/serper_search/: CHANGELOG_v2.md  README_v2.md  server.py  server_v2.py
mcp_tools/sokoban/: server.py  server_text.py
mcp_tools/sokoban/deadlock_detector/: deadlock.py  interface.py  readme.md  state.py
mcp_tools/wordle_multilingual/: core.py  server_en.py  server_ja.py  server_zh.py
sglang_venv/: pyproject.toml
src/agent_factory_3/inference/: __init__.py  handle.py  types.py
src/agent_factory_3/models/: __init__.py
src/agent_factory_3/orchestrator/: __init__.py  orchestrator.py  types.py  worker.py
src/agent_factory_3/rollout/: __init__.py  config.py  conversation_builder.py  mcp_executor.py  runner.py  types.py
src/agent_factory_3/trainer/: __init__.py  accelerate_rpc_mixin.py  checkpoint_utils.py  model_trainer.py  (+9 more)
(+66 files in other folders)
